@@ -1,3 +1,8 @@
+(04/11/14)
+==========
+
+· Updated Tweaks > Added improvement on others.sh
+
 (02/11/14)
 ==========
 
